# sns-agent-identity

./: .env.example  .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json
backend/: config.py  main.py  requirements.txt
backend/api/: agents.py
backend/services/: solana_reader.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  header.tsx  layout.tsx  page.tsx  providers.tsx
frontend/app/agent/[domain]/: page.tsx
frontend/app/presentation/: page.tsx
frontend/app/register/: page.tsx
frontend/lib/: idl.json  program.ts
programs/sns_agent_identity/: Cargo.toml
programs/sns_agent_identity/src/: lib.rs
scripts/: seed-agent.ts  seed-more-agents.ts
