[package]
name = "sns-agent-identity"
version = "0.1.0"
description = "On-chain identity protocol for AI trading agents using .sol domains"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sns_agent_identity"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
